Doc. Swagger Phase 1
añadido documentacion de Swagger en los siguientes controladores:

CatalogController, PackController, PackDetailController, SetController y CardController
